fix flicker and restore previous transition

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -99,6 +99,7 @@
 
 :host textarea,
 :host input {
+  transition: var(--calcite-animation-timing), height 0s, outline-offset 0;
   -webkit-appearance: none;
   @apply font-inherit
     text-color-1
